--- a/style.css
+++ b/style.css
@@ -35,6 +35,11 @@ img {
   display: block;
 }
 
+.active_list {
+  background-color: aqua;
+  border-radius: 4px;
+}
+
 .buttons {
   display: flex;
   margin-top: 20px;
